--- a/peraco_website/package.json
+++ b/peraco_website/package.json
@@ -11,16 +11,19 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://JMMR384.github.io/peraco_website",  "scripts": {
+  "homepage": "https://JMMR384.github.io/peraco_website",
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build" 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0" 
+    "gh-pages": "^6.3.0"
   }
 }
