ajustes finales a espera de aprobación
En caso de ser aprobados, se empezara a trabajar en el sistema para publicar la información

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "assests",
-        "Peraco"
+        "Peraco",
+        "redimensionar"
     ],
     "editor.cursorStyle": "line"
 }
