--- a/peraco_website/package.json
+++ b/peraco_website/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.9",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -15,6 +19,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.5",
+    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://JMMR384.github.io/peraco_website",
@@ -45,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@vitejs/plugin-react": "^4.4.1",
+    "gh-pages": "^6.3.0",
+    "vite": "^6.3.5"
   }
 }
